--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  align-items: center;
+  background-color: #d32b2b;
+  border-radius: 0 0 10px 10px;
+  color: aliceblue;
+  display: flex;
+  /* flex-direction: column; */
+  /* height: 200px; */
+  justify-content: space-evenly;
+  min-height: 5vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.section-links {
+  display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.link {
+  background-color: black;
+  color: aliceblue;
+  padding: 15px 20px;
+  text-decoration: none;
+}
+
+.link:hover {
+  background-color: #333333;
+}
+
+.pokedex_container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.pokedex {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.poke-card {
+  border: 1px solid #333333;
+  border-radius: 10px;
+  height: 200px;
+  margin: 15px;
+  width: 43%;
 }
