--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: #0c1821;
+  font-family: 'VT323', monospace;
+  font-size: 18px;
+}
+
+main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -17,35 +31,4 @@
 
 .section-links {
   display: flex;
-}
-
-.link {
-  background-color: black;
-  color: aliceblue;
-  padding: 15px 20px;
-  text-decoration: none;
-}
-
-.link:hover {
-  background-color: #333333;
-}
-
-.pokedex_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.pokedex {
-  display: flex;
-  flex-wrap: wrap;
-  width: 80%;
-}
-
-.poke-card {
-  border: 1px solid #333333;
-  border-radius: 10px;
-  height: 200px;
-  margin: 15px;
-  width: 43%;
 }
