--- a/src/styles/pokecard.css
+++ b/src/styles/pokecard.css
@@ -1,7 +1,50 @@
 .poke-card {
+  align-items: center;
   border: 1px solid #333333;
   border-radius: 20px;
+  display: flex;
   height: 200px;
+  justify-content: center;
   margin: 15px;
+  overflow: hidden;
+  position: relative;
   width: 30vw;
+}
+
+.poke-card .pokemon-sprite {
+  flex: 0.5 1 auto;
+}
+
+.poke-card .background {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.6;
+    width: 100%;
+    height: 100%;
+}
+
+.poke-card .info-container {
+  align-items: center;
+  background-color: #33333391;
+  border-radius: 20px;
+  color: #ced4da;
+  display: flex;
+  flex: 1 1 auto;
+  flex-flow: column nowrap;
+  height: 80%;
+  justify-content: space-around;
+  margin-right: 5px;
+  padding: 5px;
+}
+
+.poke-card .pokemon-type {
+  border-radius: 5px;
+  color: #333333;
+  margin-left: 5px;
+  padding: 5px;
+  /* text-shadow: 5px 5px 10px black; */
 }
