--- a/src/styles/pokecard.css
+++ b/src/styles/pokecard.css
@@ -6,13 +6,15 @@
   height: 200px;
   justify-content: center;
   margin: 15px;
+  max-width: 440px;
+  min-width: 300px;
   overflow: hidden;
   position: relative;
   width: 30vw;
 }
 
 .poke-card .pokemon-sprite {
-  flex: 0.5 1 auto;
+  flex: 0.3 1 auto;
 }
 
 .poke-card .background {
@@ -33,11 +35,9 @@
   border-radius: 20px;
   color: #ced4da;
   display: flex;
-  flex: 1 1 auto;
   flex-flow: column nowrap;
   height: 80%;
   justify-content: space-around;
-  margin-right: 5px;
   padding: 5px;
 }
 
@@ -47,4 +47,85 @@
   margin-left: 5px;
   padding: 5px;
   /* text-shadow: 5px 5px 10px black; */
+}
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  height: 80%;
+  flex: 1 1 auto;
+  margin-right: 20px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin: 10px 0;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  align-items: center;
+  background-color: #33333391;
+  border-radius: 20px;
+  color: #ced4da;
+  display: flex;
+  flex: 1 1 auto;
+  flex-flow: row wrap;
+  height: 80%;
+  justify-content: space-around;
+  margin-right: 5px;
+  transform: rotateY(180deg);
+  padding: 5px;
+}
+
+.pokemon-stats {
+  align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.pokemon-moves {
+  align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  padding: 20px;
+}
+
+.pokemon-moves .pokemon-moves-container {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .flip-card-back {
+    flex-flow: column wrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
 }
