fix landpage mobile version

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -15,13 +15,6 @@
   height: 50vh;
 }
 
-/* .pokemon-top-gif {
-  position: absolute;
-  top: 5vh;
-  max-width: 200px;
-  width: 15vw;
-} */
-
 .pokemon-image {
   max-width: 200px;
   width: 15vw;
@@ -61,19 +54,64 @@
   text-align: center;
 }
 
-@media only screen and (max-width: 1090px) {
+/* Mobile */
+@media only screen and (max-width: 767px) {
   .pokemon-image {
-    max-width: 200px;
-    width: 13vw;
+    max-width: 50px;
   }
 
   .pokemon-top-left {
-    top: 74vh;
+    top: 79vh;
     right: 2vw;
+    left: 0;
   }
 
   .pokemon-top-right {
-    top: 67vh;
+    top: 72vh;
     left: 0;
+    right: 0;
+  }
+
+  .pokemon-bottom-right {
+    top: 84vh;
+    left: 0;
+    right: 0;
+  }
+
+  .pokemon-bottom-left {
+    top: 89vh;
+    left: 0;
+    right: 0;
+  }
+}
+
+/* Tablet */
+@media only screen and (min-width: 768px) and (max-width: 1040px) {
+  .pokemon-image {
+    max-width: 80px;
+  }
+
+  .pokemon-top-left {
+    top: 70vh;
+    right: 2vw;
+    left: 0;
+  }
+
+  .pokemon-top-right {
+    top: 60vh;
+    left: 0;
+    right: 0;
+  }
+
+  .pokemon-bottom-right {
+    top: 80vh;
+    left: 0;
+    right: 0;
+  }
+
+  .pokemon-bottom-left {
+    top: 87vh;
+    left: 0;
+    right: 0;
   }
 }
