--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -47,3 +47,10 @@
   min-width: 350px;
   min-height: 250px;
 }
+
+.feedback-gif {
+  border-radius: 5px;
+  margin-bottom: 8px;
+  min-width: 250px;
+  width: 30vw;
+}
